<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ImcActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextViewForms"
            android:text="@string/imc_desc"/>

        <EditText
            android:id="@+id/editTextWidthIMC"
            style="@style/EditTextForms"
            android:hint="@string/weight" />

        <EditText
            android:id="@+id/editTextHeightIMC"
            style="@style/EditTextForms"
            android:hint="@string/height" />

        <Button
            android:id="@+id/btnCalcIMC"
            style="@style/ButtonForms"
            android:text="@string/calc"
            android:layout_gravity="center"/>

    </LinearLayout>


</ScrollView>